--- a/SpringMVC_SSM/src/main/resources/log4j.properties
+++ b/SpringMVC_SSM/src/main/resources/log4j.properties
@@ -1,4 +1,37 @@
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=INFO,stdout,file,errfile
+log4j.addivity.org.apache=true
+#log4j.DEBUG=true
+# CONSOLE
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Threshold=DEBUG
+#log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
+
+#DEBUG
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.File=D:\\mycode\\logs\\demo.log
+log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH'.log'
+log4j.appender.file.Encoding=UTF-8
+log4j.appender.file.Threshold=DEBUG
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d %5p %c{1}:%L : %m%n
+
+#ERROR
+log4j.appender.errfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.errfile.File=D:\\Java\\logs\\shhlog-error.log
+log4j.appender.errfile.DatePattern='.'yyyy-MM-dd'.log'
+log4j.appender.errfile.Encoding=UTF-8
+log4j.appender.errfile.Threshold=ERROR
+log4j.appender.errfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.errfile.layout.ConversionPattern=%d %5p %c{1}:%L : %m%n
+
+log4j.logger.com.springframework=ERROR
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=INFO
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=INFO
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=INFO
+log4j.logger.java.sql.Connection=INFO  
+log4j.logger.java.sql.Statement=INFO  
+log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=INFO
