--- a/SpringMVC_SSM/pom.xml
+++ b/SpringMVC_SSM/pom.xml
@@ -130,11 +130,22 @@
         </dependency>
         <!-- 第四部分：日志 -->
         <!-- 实现slf4j接口并整合 -->
-        <!--<dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.1</version>
-        </dependency>-->
+        <!--LOG4日志 start  -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
         <!-- lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
